switch notifications to mobile app

--- a/automations/hass.yaml
+++ b/automations/hass.yaml
@@ -3,7 +3,7 @@
     - platform: homeassistant
       event: start
   action:
-    - service: notify.ios_iphone_von_dennis
+    - service: notify.mobile_app_iphone_von_dennis
       data_template:
         title: "HASS Restart"
         message: "Home Assistant wurde neu gestartet"
