--- a/packages/pool.yaml
+++ b/packages/pool.yaml
@@ -41,7 +41,6 @@ input_boolean:
 input_number:
   pool_temp_threshold:
     icon: mdi:oil-temperature
-    #initial: 22
     min: 20.0
     max: 29.0
     step: 0.5
@@ -81,7 +80,7 @@ automation:
         after: '06:00:00'
         before: '21:00:00'
     action:
-      - service: notify.ios_iphone_von_dennis
+      - service: notify.mobile_app_iphone_von_dennis
         data_template:
           title: 'Pool'
           message: 'Die Temperatur im Pool beträgt aktuell {{ states("sensor.pool_temp") }}°C, die Filterpumpe wird jetzt aktiviert'
