--- a/packages/rooms/kinderzimmer.yaml
+++ b/packages/rooms/kinderzimmer.yaml
@@ -1,45 +1,3 @@
-homeassistant:
-  customize:
-    light.gateway_light_7811dcb8c5ed:
-      friendly_name: Nachtlicht
-      icon: 'mdi:lightbulb-on-outline'
-      state_card_mode: single-line
-    switch.kz_light1:
-      friendly_name: Spielbereich
-      icon: 'mdi:ceiling-light'
-    switch.kz_light2:
-      friendly_name: Schlafbereich
-      icon: 'mdi:ceiling-light'
-    switch.rf_arthur_lichterkette:
-      friendly_name: Lichterkette
-
-group:
-  kinderzimmer_view:
-    name: Kinderzimmer
-    view: yes
-    icon: mdi:puzzle
-    entities:
-      - group.kz_status
-      - group.kz_licht
-      - group.aquarium
-      - camera.arthur_cam
-      # - camera.arthur_cam_mjpeg
-
-  kz_status:
-    name: Kinderzimmer
-    control: hidden
-    entities:
-      - sensor.temperature_158d0001574111
-      - sensor.humidity_158d0001574111
-
-  kz_licht:
-    name: Licht
-    entities:
-      - switch.kz_light1
-      - switch.kz_light2
-      - light.gateway_light_7811dcb8c5ed
-      - switch.rf_arthur_lichterkette
-
 switch:
   - platform: mqtt
     name: kz_light1
@@ -63,30 +21,6 @@ switch:
     payload_available: Online
     payload_not_available: Offline
 
-  - platform: pilight
-    switches:
-      rf_arthur_lichterkette:
-        on_code:
-          protocol: clarus_switch
-          id: C7
-          unit: 24
-          'on': 1
-        off_code:
-          protocol: clarus_switch
-          id: C7
-          unit: 24
-          'off': 0
-        on_code_receive:
-          protocol: clarus_switch
-          id: C7
-          unit: 24
-          state: 'on'
-        off_code_receive:
-          protocol: clarus_switch
-          id: C7
-          unit: 24
-          state: 'off'
-
 automation:
   - alias: Arthur macht in der Nacht das Licht an
     trigger:
@@ -107,8 +41,6 @@ automation:
           rgb_color: [255,100,100]
           brightness_pct: 100
       - service: script.yeelight_flur_weiss
-      - service: homeassistant.turn_on
-        entity_id: switch.rf_sz_nachttisch
 
   - alias: Kinderzimmer Schlafbereich Nachts Licht AUS
     trigger:
@@ -118,7 +50,6 @@ automation:
       service: homeassistant.turn_off
       entity_id:
         - switch.kz_light2
-        - switch.rf_arthur_lichterkette
 
   - alias: Kinderzimmer Nachtlicht
     trigger:
@@ -154,8 +85,6 @@ automation:
           after: '20:00:00'
           before: '00:30:00'
     action:
-      - service: homeassistant.turn_on
-        entity_id: switch.rf_sz_nachttisch
       - service: notify.notify
         data:
           title: 'Warnung!'
@@ -192,5 +121,5 @@ automation:
         click_type: both
     action:
       service: switch.toggle
-      entity_id: switch.rf_arthur_lichterkette
+      entity_id: switch.plug_158d0001530b1b
 
