--- a/configuration.yaml
+++ b/configuration.yaml
@@ -107,6 +107,22 @@ camera:
   #   mjpeg_url: rtsp://192.168.10.115/unicast
     #extra_arguments: '-c:v h264_omx'
 
+homekit:
+  filter:
+    include_domains:
+      - light
+      - switch
+      - media_player
+    include_entities:
+      - script.all_off
+
+emulated_hue:
+  exposed_domains:
+    - switch
+    - light
+    - media_player
+    - script
+
 pilight:
   host: 192.168.10.93
   port: 5000
@@ -142,16 +158,9 @@ weather:
     mode: daily
 
 automation: !include_dir_merge_list automations
-binary_sensor: !include_dir_merge_list binary_sensor
 device_tracker: !include_dir_merge_list device_tracker
-emulated_hue: !include emulated_hue.yaml
 group: !include_dir_merge_named groups
-homekit: !include homekit.yaml
-# input_text: !include inputs/text.yaml
 ios: !include ios.yaml
-# light: !include_dir_merge_list lights
 media_player: !include_dir_merge_list media_player
-scene: !include_dir_merge_list scene
 script: !include_dir_merge_named scripts
 sensor: !include_dir_merge_list sensor
-# switch: !include_dir_merge_list switch
