--- a/scripts/all_off.yaml
+++ b/scripts/all_off.yaml
@@ -1,30 +1,11 @@
 all_off:
-  alias: Alles ausschalten
   sequence:
     - service: homeassistant.turn_off
       data:
         entity_id:
-          # Media Players
-          - media_player.lg_tv
+          - group.all_lights
+          - group.all_switches
           - media_player.denon_avr_x1100w
-          - switch.rf_wz_subwoofer
-
-          # Lights
-          - light.floor_yeelight
-          - light.wz_ambient_lights
-          - switch.bath_light1
-          - switch.bath_light2
-          - switch.floor_light_ceiling
-          - switch.floor_light_wall
-          - switch.kitchen_light
-          - switch.kz_light1
-          - switch.kz_light2
-          - switch.rf_arthur_lichterkette
-          - switch.rf_kueche1
-          - switch.rf_kueche2
-          - switch.rf_sz_nachttisch
-          - switch.rf_wz_stehlampe
-          - switch.toilett_light
-          - switch.wz_lichtkugel
-          - switch.wz_light1
-          - switch.wz_light2
+          - media_player.lg_tv
+          - media_player.symfonisk_kuche
+          - media_player.symfonisk_wohnzimmer
