--- a/packages/rooms/kueche/automations/movement.yaml
+++ b/packages/rooms/kueche/automations/movement.yaml
@@ -1,15 +1,3 @@
-switch:
-  - platform: mqtt
-    name: kitchen_light
-    command_topic: cmnd/kitchen/light/POWER
-    state_topic: stat/kitchen/light/RESULT
-    value_template: '{{value_json.POWER}}'
-    payload_off: 'OFF'
-    payload_on: 'ON'
-    availability_topic: tele/kitchen/light/LWT
-    payload_available: Online
-    payload_not_available: Offline
-
 automation:
   - alias: kueche_movement_on
     trigger:
@@ -28,7 +16,7 @@ automation:
           below: 12
     action:
       service: homeassistant.turn_on
-      entity_id: switch.kitchen_light
+      entity_id: switch.kueche_licht
 
   - alias: kueche_movement_off
     trigger:
@@ -43,4 +31,4 @@ automation:
         state: 'on'
     action:
       service: homeassistant.turn_off
-      entity_id: switch.kitchen_light
+      entity_id: switch.kueche_licht
