yet another small automation update

--- a/scripts/cozy_lights.yaml
+++ b/scripts/cozy_lights.yaml
@@ -17,3 +17,7 @@ cozy_lights:
       entity_id: light.wz_lichtkugel
       data:
         brightness_pct: 80
+    - service: homeassistant.turn_off
+      entity_id:
+        - switch.floor_light_ceiling
+        - switch.floor_light_wall
