--- a/packages/rooms/wohnzimmer/automations/wz_switches.yaml
+++ b/packages/rooms/wohnzimmer/automations/wz_switches.yaml
@@ -21,7 +21,7 @@ automation:
       service: switch.toggle
       entity_id: switch.wz_light2
 
-  - alias: wz_ambiente_toggle
+  - alias: wz_both
     trigger:
       - platform: event
         event_type: xiaomi_aqara.click
@@ -29,9 +29,8 @@ automation:
           entity_id: binary_sensor.wall_switch_both_158d00018337c3
           click_type: both
     action:
-      - service: homeassistant.toggle
-        entity_id: light.wz_lichtkugel
-      - service: light.toggle
+      - service: script.cozy_lights
+      - service: light.turn_on
         entity_id: light.wz_wand_led
         data_template:
           hs_color:
