--- a/packages/rooms/bad/automations/bad_humidity.yaml
+++ b/packages/rooms/bad/automations/bad_humidity.yaml
@@ -14,10 +14,7 @@ automation:
       ############# Ab hier nur vor 20:00 Uhr ####################################
       - condition: time
         before: '20:00:00'
-      - service: tts.google_say
-        entity_id:
-          - media_player.symfonisk_kuche
-          - media_player.symfonisk_wohnzimmer
+      - service: script.sonos_say
         data_template:
           message: "Die Luftfeuchtigkeit im Bad ist aktuell bei {{ states.sensor.humidity_158d0001c2c57f.state }}%, bitte lüften!"
 
