--- a/scripts/sonos/play.yaml
+++ b/scripts/sonos/play.yaml
@@ -1,6 +1,6 @@
-play_music:
+sonos_play:
   sequence:
-    - service: script.join_speakers
+    - service: script.sonos_join
     - service: media_player.select_source
       entity_id: media_player.symfonisk_wohnzimmer
       data_template:
