try to fix speach engine

--- a/scripts/sonos/say.yaml
+++ b/scripts/sonos/say.yaml
@@ -8,13 +8,16 @@ sonos_say:
       entity_id:
         - media_player.symfonisk_wohnzimmer
         - media_player.symfonisk_kueche
-    - service: script.sonos_join
+    - service: script.sonos_pause
+    - wait_template: >
+        {%- is_state('media_player.symfonisk_kueche', 'paused') and -%}
+        {%- is_state('media_player.symfonisk_wohnzimmer', 'paused') -%}
     - service: media_player.volume_set
       entity_id:
         - media_player.symfonisk_wohnzimmer
         - media_player.symfonisk_kueche
       data:
-        volume_level: 0.5
+        volume_level: 0.1
     - service: tts.google_translate_say
       entity_id:
         - media_player.symfonisk_wohnzimmer
@@ -22,6 +25,10 @@ sonos_say:
       data_template:
         message: '{{ message }}'
         language: 'de'
+    - delay: '00:00:03'
+    - wait_template: >
+        {%- is_state('media_player.symfonisk_kueche', 'paused') and -%}
+        {%- is_state('media_player.symfonisk_wohnzimmer', 'paused') -%}
     - service: sonos.restore
       entity_id:
         - media_player.symfonisk_wohnzimmer
