--- a/scripts/sonos/say.yaml
+++ b/scripts/sonos/say.yaml
@@ -9,9 +9,7 @@ sonos_say:
         - media_player.symfonisk_wohnzimmer
         - media_player.symfonisk_kueche
     - service: script.sonos_pause
-    - wait_template: >
-        {%- is_state('media_player.symfonisk_kueche', 'paused') and -%}
-        {%- is_state('media_player.symfonisk_wohnzimmer', 'paused') -%}
+    - wait_template: "{{ is_state('media_player.symfonisk_kueche', 'paused') and is_state('media_player.symfonisk_wohnzimmer', 'paused')}}"
     - service: media_player.volume_set
       entity_id:
         - media_player.symfonisk_wohnzimmer
@@ -26,9 +24,7 @@ sonos_say:
         message: '{{ message }}'
         language: 'de'
     - delay: '00:00:03'
-    - wait_template: >
-        {%- is_state('media_player.symfonisk_kueche', 'paused') and -%}
-        {%- is_state('media_player.symfonisk_wohnzimmer', 'paused') -%}
+    - wait_template: "{{ is_state('media_player.symfonisk_kueche', 'paused') and is_state('media_player.symfonisk_wohnzimmer', 'paused')}}"
     - service: sonos.restore
       entity_id:
         - media_player.symfonisk_wohnzimmer
