--- a/scripts/sonos/play.yaml
+++ b/scripts/sonos/play.yaml
@@ -2,7 +2,9 @@ sonos_play:
   sequence:
     - service: script.sonos_join
     - service: media_player.select_source
-      entity_id: media_player.symfonisk_wohnzimmer
+      entity_id:
+        - media_player.symfonisk_wohnzimmer
+        - media_player.symfonisk_kueche
       data_template:
         source: "{{state_attr('media_player.symfonisk_wohnzimmer', 'source_list')[0]}}"
     - service: media_player.volume_set
@@ -12,4 +14,6 @@ sonos_play:
       data:
         volume_level: 0.1
     - service: media_player.media_play
-      entity_id: media_player.symfonisk_wohnzimmer
+      entity_id:
+        - media_player.symfonisk_wohnzimmer
+        - media_player.symfonisk_kueche
