--- a/scripts/sonos/say.yaml
+++ b/scripts/sonos/say.yaml
@@ -9,7 +9,8 @@ sonos_say:
         - media_player.symfonisk_wohnzimmer
         - media_player.symfonisk_kueche
     - service: script.sonos_pause
-    - wait_template: "{{ is_state('media_player.symfonisk_kueche', 'paused') and is_state('media_player.symfonisk_wohnzimmer', 'paused')}}"
+    - service: script.sonos_join
+    #- wait_template: "{{ is_state('media_player.symfonisk_kueche', 'paused') and is_state('media_player.symfonisk_wohnzimmer', 'paused')}}"
     - service: media_player.volume_set
       entity_id:
         - media_player.symfonisk_wohnzimmer
