--- a/scripts/cozy_lights.yaml
+++ b/scripts/cozy_lights.yaml
@@ -5,8 +5,10 @@ cozy_lights:
       below: 20
     - service: light.turn_on
       entity_id: light.gateway_light_286c0788a9dd
-      data:
-        rgb_color: [255,100,100]
+      data_template:
+        hs_color:
+          - "{{ range(360)|random }}"
+          - "{{ range(80,101)|random }}"
         brightness_pct: 50
         transition: 15
     - service: light.turn_on
