--- a/scripts/good_morning.yaml
+++ b/scripts/good_morning.yaml
@@ -2,8 +2,39 @@ good_morning:
   sequence:
     - service: script.cozy_lights
     - service: script.sonos_play
-    - condition: numeric_state
-      entity_id: sensor.illumination_158d0001e562ad
-      below: 20
+      data:
+        volume: 0.01
+    # - condition: numeric_state
+    #   entity_id: sensor.illumination_158d0001e562ad
+    #   below: 20
     - service: homeassistant.turn_on
       entity_id: switch.kueche_licht
+    # increase sonos volume step by step
+    - delay: '00:00:30'
+    - service: script.sonos_volume
+      data:
+        volume: 0.02
+    - delay: '00:00:25'
+    - service: script.sonos_volume
+      data:
+        volume: 0.03
+    - delay: '00:00:25'
+    - service: script.sonos_volume
+      data:
+        volume: 0.04
+    - delay: '00:00:25'
+    - service: script.sonos_volume
+      data:
+        volume: 0.05
+    - delay: '00:00:25'
+    - service: script.sonos_volume
+      data:
+        volume: 0.06
+    - delay: '00:00:25'
+    - service: script.sonos_volume
+      data:
+        volume: 0.07
+    - delay: '00:00:25'
+    - service: script.sonos_volume
+      data:
+        volume: 0.08
