--- a/scripts/sonos/play.yaml
+++ b/scripts/sonos/play.yaml
@@ -1,18 +1,19 @@
 sonos_play:
+  fields:
+    volume:
+      description: 'The volume to set'
   sequence:
     - service: script.sonos_join
+    - delay: '00:00:01'
     - service: media_player.select_source
       entity_id:
         - media_player.symfonisk_wohnzimmer
         - media_player.symfonisk_kueche
       data_template:
         source: "{{state_attr('media_player.symfonisk_wohnzimmer', 'source_list')[0]}}"
-    - service: media_player.volume_set
-      entity_id:
-        - media_player.symfonisk_wohnzimmer
-        - media_player.symfonisk_kueche
-      data:
-        volume_level: 0.1
+    - service: script.sonos_volume
+      data_template:
+        volume_level: '{{ volume | default(0.1) }}'
     - service: media_player.media_play
       entity_id:
         - media_player.symfonisk_wohnzimmer
