--- a/scripts/sonos/say.yaml
+++ b/scripts/sonos/say.yaml
@@ -17,7 +17,7 @@ sonos_say:
       entity_id:
         - media_player.symfonisk_wohnzimmer
         - media_player.symfonisk_kueche
-      data:
+      data_template:
         volume_level: '{{ volume | default(0.65) | float }}'
     - service: tts.google_translate_say
       entity_id:
