--- a/scripts/good_morning.yaml
+++ b/scripts/good_morning.yaml
@@ -30,11 +30,11 @@ good_morning:
     - service: script.sonos_volume
       data:
         volume: 0.06
-    - delay: '00:00:30'
-    - service: script.sonos_volume
-      data:
-        volume: 0.07
-    - delay: '00:00:30'
-    - service: script.sonos_volume
-      data:
-        volume: 0.08
+    # - delay: '00:00:30'
+    # - service: script.sonos_volume
+    #   data:
+    #     volume: 0.07
+    # - delay: '00:00:30'
+    # - service: script.sonos_volume
+    #   data:
+    #     volume: 0.08
