kz nightlight 100pct brightness

--- a/packages/rooms/kinderzimmer/automations/kz_nightlight.yaml
+++ b/packages/rooms/kinderzimmer/automations/kz_nightlight.yaml
@@ -11,7 +11,7 @@ automation:
       - service: light.turn_on
         entity_id: light.gateway_light_7811dcb8c5ed
         data_template:
-          brightness: 50
+          brightness_pct: 100
           hs_color:
             - "{{ range(360)|random }}"
             - "{{ range(80,101)|random }}"
