--- a/configuration.yaml
+++ b/configuration.yaml
@@ -96,6 +96,16 @@ camera:
   #   mjpeg_url: rtsp://192.168.10.115/unicast
     #extra_arguments: '-c:v h264_omx'
 
+device_tracker:
+  - platform: unifi_direct
+    host: 192.168.99.11
+    username: dennis
+    password: !secret UNIFI_SSH
+  - platform: tado
+    username: !secret TADO_USERNAME
+    password: !secret TADO_PASSWORD
+    home_id: !secret TADO_HOME_ID
+
 homekit:
   filter:
     include_domains:
@@ -111,10 +121,10 @@ emulated_hue:
     - media_player
     - script
 
-# pilight:
-#   host: 192.168.10.93
-#   port: 5000
-#   send_delay: 0.8
+media_player:
+  - platform: emby
+    host: 192.168.10.126
+    api_key: !secret EMBY_API_KEY
 
 xiaomi_aqara:
   discovery_retry: 10
@@ -145,10 +155,16 @@ weather:
     api_key: !secret DARK_SKY_API_KEY
     mode: daily
 
+webostv:
+  host: 192.168.10.135
+  name: LG TV
+  turn_on_action:
+    service: wake_on_lan.send_magic_packet
+    data:
+      mac: !secret LG_TV_MAC
+
 automation: !include_dir_merge_list automations
-device_tracker: !include_dir_merge_list device_tracker
 group: !include_dir_merge_named groups
 ios: !include ios.yaml
-media_player: !include_dir_merge_list media_player
 script: !include_dir_merge_named scripts
 sensor: !include_dir_merge_list sensor
