--- a/packages/rooms/flur/automations/flur_button.yaml
+++ b/packages/rooms/flur/automations/flur_button.yaml
@@ -35,14 +35,17 @@ automation:
           entity_id: light.flur_stehlampe
       #- service: script.good_night
       - service: vacuum.send_command
-        data_template:
+      # - service_template: >-
+      #     {%- if is_state("vacuum.roborock_s50", "cleaning") -%}
+      #       vacuum.vacuum.return_to_base
+      #     {%- else -%}
+      #       vacuum.send_command
+      #     {%- endif -%}
+        data:
           entity_id: vacuum.roborock_s50
-          command: >-
-            {%- if is_state("vacuum.roborock_s50", "cleaning") -%}
-              return_to_base
-            {%- else -%}
-              app_zoned_clean
-            {%- endif -%}
+          command: app_segment_clean
+          params: [18, 21]
+
 
   - alias: flur_button_leave
     trigger:
