--- a/packages/rooms/flur/automations/flur_button.yaml
+++ b/packages/rooms/flur/automations/flur_button.yaml
@@ -33,19 +33,12 @@ automation:
       - service: script.light_blink
         data:
           entity_id: light.flur_stehlampe
-      #- service: script.good_night
-      - service: vacuum.send_command
-      # - service_template: >-
-      #     {%- if is_state("vacuum.roborock_s50", "cleaning") -%}
-      #       vacuum.vacuum.return_to_base
-      #     {%- else -%}
-      #       vacuum.send_command
-      #     {%- endif -%}
-        data:
-          entity_id: vacuum.roborock_s50
-          command: app_segment_clean
-          params: [18, 21]
-
+      - service_template: >-
+          {%- if is_state("vacuum.roborock_s50", "cleaning") -%}
+            script.roborock_return_to_base
+          {%- else -%}
+            script.roborock_clean_floor
+          {%- endif -%}
 
   - alias: flur_button_leave
     trigger:
