--- a/scripts/sonos/say.yaml
+++ b/scripts/sonos/say.yaml
@@ -5,6 +5,9 @@ sonos_say:
     volume:
       description: 'The volume to set'
   sequence:
+    - condition: time
+      after: '06:00:00'
+      before: '20:00:00'
     - service: sonos.snapshot
       entity_id:
         - media_player.symfonisk_wohnzimmer
