--- a/scripts/roborock/roborock_clean_room.yaml
+++ b/scripts/roborock/roborock_clean_room.yaml
@@ -6,11 +6,11 @@
 ##
 roborock_clean_room:
   fields:
-    rooms:
-      description: 'The rooms to clean'
+    room:
+      description: 'The room to clean'
   sequence:
     - service: vacuum.send_command
       data_template:
         entity_id: vacuum.roborock_s50
         command: app_segment_clean
-        params: {{ rooms }}
+        params: '{{ room }}'
